Updates and comments in snake